# spin-templates

./: .gitignore  LICENSE  README.md  test-template.sh
.github/PULL_REQUEST_TEMPLATE/: new-template.md
.github/workflows/: bs-react.yml  cli.yml  lib.yml  native.yml  ppx.yml  react.yml
bs-react/: README.md  spin
bs-react/template/: LICENSE  spin
cli/: README.md  spin
cli/generators/cmd/: README.md  spin
cli/generators/cmd/files/: cmd.ml  cmd.re  test.ml  test.re
cli/template/: .gitattributes  .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  dune-project  esy.json  package.json  spin  {{ project_slug }}.opam
cli/template/.github/workflows/: ci.yml  release.yml  test.yml
cli/template/esy.lock/: index.json
cli/template/executable/: Cmd__hello.re  Man.re  Package.re  dune  {{ project_slug | camel_case }}App.re
cli/template/executable/commands/: Cmd_hello.re
cli/template/lib/: config.ml  config.re  dune  errors.ml  errors.mli  errors.re  errors.rei  utils.ml  utils.re
cli/template/script/: install.sh  release-make-skeleton.js  release.sh
cli/template/scripts/: install.sh  release-make-skeleton.js  release.sh  tmattio-{{ project_slug | snake_case }}.rb
cli/template/test/: SmokeTest.re  TestFramework.re  TestRunner.re  dune  utils_test.re
cli/template/test/integration/: cmd_hello_test.ml  cmd_hello_test.re  smoke_test.ml  smoke_test.re
cli/template/test/support/: TestFramework.re  TestUtils.re  test_runner.ml  test_utils.ml  test_utils.re
cli/template/test/{{ project_slug | snake_case }}/: Test_utils.re  utils_test.ml  utils_test.re
cli/template/test/{{ project_slug | snake_case }}_app/: cmd_hello_test.ml  cmd_hello_test.re  smoke_test.ml  smoke_test.re
cli/template/test/{{ project_slug | snake_case }}_exe/: Test_integration_version.re
graphql/: spin
graphql/template/: .gitignore  README.md  dune-project  package.json  spin
graphql/template/executable/: Server.re  dune
graphql/template/test/: TestRunner.re  dune
lib/: README.md  spin
lib/template/: CONTRIBUTING.md  Makefile  README.md  dune-project  esy.json  package.json  spin  {{ project_slug }}+dev.opam  {{ project_slug }}.opam
lib/template/.github/workflows/: ci.yml
lib/template/example/: dune  simple.ml  simple.re
lib/template/lib/: dune  utils.mli  utils.re  utils.rei  {{ project_slug | snake_case }}.ml  {{ project_slug | snake_case }}.re
lib/template/test/: dune  utils_test.ml  utils_test.re
native/: README.md  spin
native/template/: .gitignore  CHANGES.md  CONTRIBUTING.md  Makefile  README.md  dune  dune-project  esy.json  package.json  spin  {{ project_slug }}.opam
native/template/.github/workflows/: ci.yml
native/template/lib/: dune  utils.ml  utils.re  utils.rei
native/template/test/: dune  utils_test.ml  utils_test.re
native/template/test/support/: test_runner.re
native/template/test_runner/: test_runner_app.ml
ppx/: README.md  spin
ppx/template/: .gitattributes  CONTRIBUTING.md  LICENSE  Makefile  README.md  dune-project  esy.json  package.json  spin  {{ project_slug }}.opam
ppx/template/.github/workflows/: ci.yml  release.yml
ppx/template/lib/: dune  {{ project_slug | snake_case }}.ml  {{ project_slug | snake_case }}.re
ppx/template/script/: release-make-skeleton.js  release.sh
ppx/template/scripts/: release-postinstall.js
ppx/template/test/: dune  simple_test.ml  simple_test.re
ppx/template/test/support/: test_runner.re
ppx/template/test_bs/: bsconfig.json  esy.json
ppx/template/test_bs/src/: index.ml  index.re
ppx/template/test_runner/: dune  test_runner_app.re
react/: README.md  spin
react/template/: .gitattributes  .gitignore  README.md  bsconfig.json  package.json  spin
react/template/.github/workflows/: ci.yml
react/template/config/: webpack.config.js
react/template/src/: App.re
react/template/src/components/: Greet.re
