opam-version: "2.0"
name: "{{ project_slug }}"
description: ""
synopsis: ""
version: "0.1.0"
maintainer: "Thibaut Mattio <thibaut.mattio@gmail.com>"
authors: [
  "Thibaut Mattio <thibaut.mattio@gmail.com>"
]
homepage: "https://github.com/tmattio/{{ project_slug }}"
bug-reports: "https://github.com/tmattio/{{ project_slug }}/issues"
license: "MIT"
dev-repo: "git+https://github.com/tmattio/{{ project_slug }}.git"
build: []
depends: []
