(lang dune 1.11)
(name {{ project_slug }})
(version 0.1.0)
(source (github {{ github_username }}/{{ project_slug }}))
(license MIT)
(authors "{{ author_name }}")
(maintainers "{{ author_name }}")

{% if syntax == 'Reason' -%}
(using fmt 1.2 (enabled_for reason))
{%- else -%}
(using fmt 1.2 (enabled_for ocaml))
{%- endif %}
(generate_opam_files true)

(package
 (name {{ project_slug }})
 (synopsis "{{ project_description }}")
 (depends
  {% if syntax == 'Reason' -%}
  reason
  {% endif -%}
  dune
  rely
  base
  stdio))
