(library
 (name {{ project_slug | snake_case }}_test)
 (flags -open Base -linkall -g -w -9)
 (libraries base lwt.unix {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug }}.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries base {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug | snake_case }}_test)
 (flags -open Base)
 (modules test_runner))

(rule
 (alias runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))

(include_subdirs unqualified)
