(library
 (name {{ project_slug | snake_case }}_test)
 (flags -linkall -g -w -9)
 (libraries lwt.unix {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug }}.lib)
 (modules
  (:standard \ test_runner)))

(executable
 (name test_runner)
 (libraries {% if test_framework == 'Rely' %}rely.lib{% else %}alcotest{% endif %} {{ project_slug | snake_case }}_test)
 (modules test_runner))

(rule
 (alias runtest)
 (deps
  (:m test_runner.exe))
 (action
  (run %{m} -q --color=always)))

(include_subdirs unqualified)
